2010-07-08  Ingo Thies  <ingo.thies@gmx.de>

	* src/gadgets.h src/mouse.c src/set.c:  Allow continuous rotation of 3D
	plots when mousing; i.e., do not limit rotation angle to 0<rotx<180

2010-07-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (lp_parse): The coloring option "lc N" should not set a
	use_palette flag.  Probably the option "lc variable" shouldn't either,
	but I'm not 100% certain about that.
	Bug #3026477

2010-07-07  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/datafile.c src/gadgets.c src/gadgets.h src/gp_types.h
	src/graph3d.c src/graphics.c src/graphics.h src/plot2d.c src/save.c
	src/set.c src/show.c src/tables.c src/tables.h src/unset.c:

	* docs/gnuplot.doc docs/plotstyles.gnu demo/all.dem demo/ellipses.dat
	demo/ellipses_style.dem demo/orbital_elements.dat demo/orbits.dem

	New plot style "with ellipses".  Demos and documentation to match.

2010-07-07  Ethan A Merritt  <merritt@u.washington.edu>

	* term/PostScript/prologue.ps:  Add a default definition 
	    /g {setgray} def
	so that a missing palette initialization will result in normal 
	grayscale rather than an invalid PostScript file.
	Bug #3026477

2010-07-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (boundary3d): Prevent infinite loop or divide-by-zero
	if the requested plot is so small that x or y dimension goes to zero.
	Bug #3026145

2010-07-05  Akira Kakuto

	* term/win.trm:  More fixes to font initialization.
	Bug #2972307 #2993504

2010-07-02  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/win.trm:  Explicitly initialize font.
	Bug #2972307

2010-07-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readbinary): Regardless of the current timefmt
	setting, if we are reading time data from a binary file it will come in
	as a floating point value rather than as a string.  So we can treat it
	like any other binary value.
	Thanks to Thomas Sefzick for pointing this out.
